CJSONParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .CJSONListener import CJSONListener
else:
    from CJSONListener import CJSONListener


class CJSONParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'{'", u"','", u"'}'", u"':'", u"'['", 
                     u"']'", u"'true'", u"'false'", u"'null'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"STRING", u"NUMBER", 
                      u"WS" ]

    RULE_json = 0
    RULE_myobject = 1
    RULE_pair = 2
    RULE_array = 3
    RULE_value = 4

    ruleNames =  [ "json", "myobject", "pair", "array", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    STRING=10
    NUMBER=11
    WS=12

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class JsonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def myobject(self):
            return self.getTypedRuleContext(CJSONParser.MyobjectContext,0)


        def array(self):
            return self.getTypedRuleContext(CJSONParser.ArrayContext,0)


        def getRuleIndex(self):
            return CJSONParser.RULE_json

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, CJSONListener ):
                listener.enterJson(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, CJSONListener ):
                listener.exitJson(self)




    def json(self):

        localctx = CJSONParser.JsonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_json)
        try:
            self.state = 12
            token = self._input.LA(1)
            if token in [CJSONParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 10
                self.myobject()

            elif token in [CJSONParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 11
                self.array()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MyobjectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CJSONParser.PairContext)
            else:
                return self.getTypedRuleContext(CJSONParser.PairContext,i)


        def getRuleIndex(self):
            return CJSONParser.RULE_myobject

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, CJSONListener ):
                listener.enterMyobject(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, CJSONListener ):
                listener.exitMyobject(self)




    def myobject(self):

        localctx = CJSONParser.MyobjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_myobject)
        self._la = 0 # Token type
        try:
            self.state = 27
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 14
                self.match(CJSONParser.T__0)
                self.state = 15
                self.pair()
                self.state = 20
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CJSONParser.T__1:
                    self.state = 16
                    self.match(CJSONParser.T__1)
                    self.state = 17
                    self.pair()
                    self.state = 22
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 23
                self.match(CJSONParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 25
                self.match(CJSONParser.T__0)
                self.state = 26
                self.match(CJSONParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PairContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(CJSONParser.STRING, 0)

        def value(self):
            return self.getTypedRuleContext(CJSONParser.ValueContext,0)


        def getRuleIndex(self):
            return CJSONParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, CJSONListener ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, CJSONListener ):
                listener.exitPair(self)




    def pair(self):

        localctx = CJSONParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.match(CJSONParser.STRING)
            self.state = 30
            self.match(CJSONParser.T__3)
            self.state = 31
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CJSONParser.ValueContext)
            else:
                return self.getTypedRuleContext(CJSONParser.ValueContext,i)


        def getRuleIndex(self):
            return CJSONParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, CJSONListener ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, CJSONListener ):
                listener.exitArray(self)




    def array(self):

        localctx = CJSONParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.state = 46
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.match(CJSONParser.T__4)
                self.state = 34
                self.value()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CJSONParser.T__1:
                    self.state = 35
                    self.match(CJSONParser.T__1)
                    self.state = 36
                    self.value()
                    self.state = 41
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 42
                self.match(CJSONParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.match(CJSONParser.T__4)
                self.state = 45
                self.match(CJSONParser.T__5)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(CJSONParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(CJSONParser.NUMBER, 0)

        def myobject(self):
            return self.getTypedRuleContext(CJSONParser.MyobjectContext,0)


        def array(self):
            return self.getTypedRuleContext(CJSONParser.ArrayContext,0)


        def getRuleIndex(self):
            return CJSONParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, CJSONListener ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, CJSONListener ):
                listener.exitValue(self)




    def value(self):

        localctx = CJSONParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_value)
        try:
            self.state = 55
            token = self._input.LA(1)
            if token in [CJSONParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.match(CJSONParser.STRING)

            elif token in [CJSONParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.match(CJSONParser.NUMBER)

            elif token in [CJSONParser.T__0]:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.myobject()

            elif token in [CJSONParser.T__4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.array()

            elif token in [CJSONParser.T__6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 52
                self.match(CJSONParser.T__6)

            elif token in [CJSONParser.T__7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 53
                self.match(CJSONParser.T__7)

            elif token in [CJSONParser.T__8]:
                self.enterOuterAlt(localctx, 7)
                self.state = 54
                self.match(CJSONParser.T__8)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx




